# SuGaR

./: Dockerfile  docker-build.yml  instructions.txt
.github/workflows/: docker-build.yml
data/basket/distorted/sparse/0/: project.ini
data/basket/stereo/: fusion.cfg  patch-match.cfg
workspace/: BUILD.bazel  Dockerfile  WORKSPACE  apt_packages.txt  sugar_environment.yml  system_dependencies.txt  system_packages.txt
